--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,13 +1,20 @@
-.navbar {
+header {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     border-radius: 4px;
     background-color: #eceff1;
     border-style: solid ;
     border-color: #707070;
 }
 
-.navbar__link {
-    padding: 20px;
+.nav__links {
+    padding-right: 100px;
+}
+
+.nav__links li {
+    display: inline-block;
+    padding: 0 20px;
     font-size: 2em;
     font-family: 'Merriweather', serif;
     cursor: pointer;
@@ -17,3 +24,24 @@
     color: #707070;
     border-bottom: 3px solid transparent;
 }
+
+.nav__links li a:link {
+    color: #707070;
+    text-decoration: none;
+}
+
+.nav__links li a:visited {
+    color: #707070;
+    text-decoration: none;
+}
+
+.nav__links li a:hover {
+    color: #707070;
+    text-decoration: none;
+}
+
+.nav__links li a:active {
+    color: #707070;
+    text-decoration: none;
+}
+
