--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -2,10 +2,15 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-radius: 4px;
-    background-color: #eceff1;
-    border-style: solid ;
-    border-color: #707070;
+    background-color: #E5E5E5;
+    border-style: solid;
+    border-color: #989898;
+}
+
+.navbar__title {
+    display: flex;
+    padding: 0 20px;
+    margin-bottom: 20px;
 }
 
 .nav__links {
