--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -6,3 +6,19 @@
     min-width: 100%;
     min-height: 100%;
 }
+
+.Running {
+    height: 300px;
+    padding: 0 5px;
+}
+
+.Quote {
+    display: flex;
+    font-family: 'Merriweather', serif;
+    color: #707070;
+    font-size: 2em;
+    justify-content: left;
+    padding: 0 100px;
+    height: 200px;
+    width: 400px;
+}
